demand-shaping-k8s/e-shop example app/overlays/webapp/lab/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations: 
    traefik.ingress.kubernetes.io/router.entrypoints: web
  
spec:  
  rules:
  - host: e-shop.aks.carbon-aware-computing.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name:  webapp
              port:
                number: 8080
